...
    func styleNavigationBar() {
        navigationController?.navigationBar.barTintColor = BonfireColors.orange
        navigationController?.navigationBar.tintColor = .whiteColor()
        navigationController?.navigationBar.titleTextAttributes = [NSForegroundColorAttributeName: UIColor.whiteColor()]
        UIApplication.sharedApplication().statusBarStyle = .LightContent

        title = "Channels"
        addBarButtonItem()

        navigationController?.navigationBarHidden = false
    }

}
...
