...

        channelNameField.backgroundColor = UIColor(white: 1.0, alpha: 0.78)
        channelNameField.borderStyle = .None
        channelNameField.clearButtonMode = .Always
        channelNameField.textAlignment = .Center
        channelNameField.font = UIFont.systemFontOfSize(45)
        channelNameField.accessibilityIdentifier = "NameField"

        channelNameField.delegate = self

        channelNamePlaceholder.text = "😘"
        channelNamePlaceholder.font = UIFont.systemFontOfSize(45)
        channelNamePlaceholder.textAlignment = .Center
...
